config/dev/director.yml
apiVersion: v1
kind: Pod
metadata:
  name: director
spec:
  restartPolicy: Never
  containers:
    - name: director
      image: director:0.0.1
      imagePullPolicy: Never
      # image: 192.168.99.100:30127/factory.director:v1
      stdin: true
      tty: true
      volumeMounts:
        - mountPath: /usr/src/host
          name: src
  volumes:
    - name: src
      hostPath:
        path: /mount-9p/
