config/dev/client.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    server: client
  name: client
spec:
  type: NodePort
  ports:
   - port: 80
     targetPort: http
     nodePort: 31003
  selector:
    app: factory
    server: client
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: client-deployment
  labels:
    app: factory
    server: client
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: factory
        server: client
    spec:
      containers:
        - name: nginx
          image: client:0.0.1
          ports:
          - containerPort: 80
            name: http
